tests/baselines/reference/YieldExpression10_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression10_es6.ts(1,11): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
tests/cases/conformance/es6/yieldExpressions/YieldExpression10_es6.ts(2,11): error TS2304: Cannot find name 'foo'.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression10_es6.ts (2 errors) ====
    var v = { * foo() {
              ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
        yield(foo);
              ~~~
!!! error TS2304: Cannot find name 'foo'.
      }
    }
    